# bibliography

./: .gitignore  CMakeLists.txt  README.md  bibliography.bib  bibliography.json  bibliography.sh  jvanhare.bib  jvanhare.json  turbulence.bib
.github/workflows/: deploy.yaml
src/: cad.bib  jvanhare.bib  library.bib  turbulence.bib  visualization.bib
